--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
-    "bootstrap": "^5.0.0-beta1",
+    "bootstrap": "4..0",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
